--- a/Success Motors Org/force-app/main/default/classes/OpportunityEmailReplyHandler_Test.cls
+++ b/Success Motors Org/force-app/main/default/classes/OpportunityEmailReplyHandler_Test.cls
@@ -1,5 +1,5 @@
 @isTest
-public class testOpportunityEmailReplyHandler {
+public class OpportunityEmailReplyHandler_Test {
     @TestSetup
     static void makeData(){
         Contact testCon = new Contact(
@@ -29,7 +29,24 @@ public class testOpportunityEmailReplyHandler {
         Messaging.InboundEnvelope env    = new Messaging.InboundEnvelope();
         // Test with the subject that matches the unsubscribe statement.
         email.subject = op.Invoice_Number__c;
-        email.plainTextBody = 'approved';
+        email.htmlBody = 'approved';
+        env.fromAddress = 'user@acme.com';
+        Test.startTest();
+            Messaging.InboundEmailResult result = testHandler.handleInboundEmail(email, env);
+        Test.stopTest();
+        Assert.areEqual(true, result.success);
+       
+    }
+    @IsTest
+    static void testHandleInboundEmailApprovedNoSubject(){
+        Opportunity op = [SELECT ID, NAME, STAGENAME, Invoice_Number__c FROM Opportunity WHERE Name='TestOp' LIMIT 1];
+        OpportunityEmailReplyHandler testHandler = new OpportunityEmailReplyHandler();
+
+        Messaging.InboundEmail email = new Messaging.InboundEmail() ;
+        Messaging.InboundEnvelope env    = new Messaging.InboundEnvelope();
+        // Test with the subject that matches the unsubscribe statement.
+        email.subject = '';
+        email.htmlBody = op.Invoice_Number__c+' approved';
         env.fromAddress = 'user@acme.com';
         Test.startTest();
             Messaging.InboundEmailResult result = testHandler.handleInboundEmail(email, env);
@@ -45,7 +62,7 @@ public class testOpportunityEmailReplyHandler {
         Messaging.InboundEnvelope env = new Messaging.InboundEnvelope();
         // Test with the subject that matches the unsubscribe statement.
         email.subject = 'Wrong Subject';
-        email.plainTextBody = op.Invoice_Number__c +' rejected';
+        email.htmlBody = op.Invoice_Number__c +' rejected';
         env.fromAddress = 'user@acme.com';
         Test.startTest();
             Messaging.InboundEmailResult result = testHandler.handleInboundEmail(email, env);
@@ -61,7 +78,7 @@ public class testOpportunityEmailReplyHandler {
         Messaging.InboundEnvelope env    = new Messaging.InboundEnvelope();
         // Test with the subject that matches the unsubscribe statement.
         email.subject = op.Invoice_Number__c;
-        email.plainTextBody = 'rej';
+        email.htmlBody = 'rej';
         env.fromAddress = 'user@acme.com';
         Test.startTest();
             Messaging.InboundEmailResult result = testHandler.handleInboundEmail(email, env);
@@ -74,11 +91,11 @@ public class testOpportunityEmailReplyHandler {
     static void testSetResultsOfOpportunityApproved(){
         Opportunity op = [SELECT ID, NAME, STAGENAME, Invoice_Number__c FROM Opportunity WHERE Name='TestOp' LIMIT 1];
         Messaging.InboundEmail email = new Messaging.InboundEmail() ;
-        email.plainTextBody = 'I may say it is approved';
+        email.htmlBody = 'I may say it is approved';
         OpportunityEmailReplyHandler testHandler = new OpportunityEmailReplyHandler();
         Test.startTest();
             string result = testHandler.SetResultOfOpportunity(op.Invoice_Number__c, email);
-            email.plainTextBody = '';
+            email.htmlBody = '';
             string result2 = testHandler.SetResultOfOpportunity(op.Invoice_Number__c, email);
         Test.stopTest();
         Assert.areEqual('', result);
@@ -90,7 +107,7 @@ public class testOpportunityEmailReplyHandler {
     static void testSetResultsOfOpportunityRejected(){
         Opportunity op = [SELECT ID, NAME, STAGENAME, Invoice_Number__c FROM Opportunity WHERE Name='TestOp' LIMIT 1];
         Messaging.InboundEmail email = new Messaging.InboundEmail() ;
-        email.plainTextBody = 'I may say it is rejected';
+        email.htmlBody = 'I may say it is rejected';
         OpportunityEmailReplyHandler testHandler = new OpportunityEmailReplyHandler();
         Test.startTest();
             string result = testHandler.SetResultOfOpportunity(op.Invoice_Number__c, email);
@@ -104,14 +121,11 @@ public class testOpportunityEmailReplyHandler {
         string pattern='test';
         String findString = 'some test string';
         OpportunityEmailReplyHandler testHandler = new OpportunityEmailReplyHandler();
-        string result = testHandler.FindStringByPattern(pattern,findString);
+        string result = testHandler.findStringByPattern(pattern,findString);
         findString = 'tes string';
-        string result2 = testHandler.FindStringByPattern(pattern,findString);
+        string result2 = testHandler.findStringByPattern(pattern,findString);
         
         Assert.areEqual('test', result);
         Assert.areEqual('', result2);
-    }
-    public testOpportunityEmailReplyHandler() {
-
     }
 }
