--- a/Success Motors Org/force-app/main/default/classes/OpportunityPDFController_Test.cls
+++ b/Success Motors Org/force-app/main/default/classes/OpportunityPDFController_Test.cls
@@ -1,5 +1,5 @@
 @isTest
-public class testOpportunityPDFController {
+public class OpportunityPDFController_Test {
     @TestSetup
     static void makeData(){
         Contact testCon = new Contact(
@@ -25,7 +25,7 @@ public class testOpportunityPDFController {
         Opportunity op = [SELECT Id, Name From Opportunity Where StageName='Prospecting' LIMIT 1];
         Integer expected = 2;
         Test.startTest();
-           Integer result = OpportunityPDFController.CreateDocument(op.Id);
+           Integer result = OpportunityPDFController.createDocument(op.Id);
         Test.stopTest();
         Assert.areEqual(expected, result);
     }
@@ -33,7 +33,7 @@ public class testOpportunityPDFController {
     static void testErrorOnCreatingDocument() {
          Integer expected = -1;
         Test.startTest();
-           Integer result = OpportunityPDFController.CreateDocument('GGh33315');
+           Integer result = OpportunityPDFController.createDocument('GGh33315');
         Test.stopTest();
         Assert.areEqual(expected, result);
     }
@@ -41,9 +41,9 @@ public class testOpportunityPDFController {
     static void testSuccessfulUpdatedDocument() {
         Opportunity op = [SELECT Id, Name From Opportunity Where StageName='Prospecting' LIMIT 1];
         Integer expected = 1;
-        OpportunityPDFController.CreateDocument(op.Id);
+        OpportunityPDFController.createDocument(op.Id);
         Test.startTest();
-            Integer result = OpportunityPDFController.CreateDocument(op.Id);
+            Integer result = OpportunityPDFController.createDocument(op.Id);
         Test.stopTest();
         Assert.areEqual(expected, result);
     }
